; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_tox.c_tox_friend_add_norequest.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_tox.c_tox_friend_add_norequest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOX_ERR_FRIEND_ADD_NULL = common dso_local global i32 0, align 4
@UINT32_MAX = common dso_local global i64 0, align 8
@TOX_ERR_FRIEND_ADD_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @tox_friend_add_norequest(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %17, label %12

12:                                               ; preds = %3
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* @TOX_ERR_FRIEND_ADD_NULL, align 4
  %15 = call i32 @SET_ERROR_PARAMETER(i32* %13, i32 %14)
  %16 = load i64, i64* @UINT32_MAX, align 8
  store i64 %16, i64* %4, align 8
  br label %34

17:                                               ; preds = %3
  %18 = load i32*, i32** %5, align 8
  store i32* %18, i32** %8, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i64 @m_addfriend_norequest(i32* %19, i32* %20)
  store i64 %21, i64* %9, align 8
  %22 = load i64, i64* %9, align 8
  %23 = icmp sge i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %17
  %25 = load i32*, i32** %7, align 8
  %26 = load i32, i32* @TOX_ERR_FRIEND_ADD_OK, align 4
  %27 = call i32 @SET_ERROR_PARAMETER(i32* %25, i32 %26)
  %28 = load i64, i64* %9, align 8
  store i64 %28, i64* %4, align 8
  br label %34

29:                                               ; preds = %17
  %30 = load i64, i64* %9, align 8
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @set_friend_error(i64 %30, i32* %31)
  %33 = load i64, i64* @UINT32_MAX, align 8
  store i64 %33, i64* %4, align 8
  br label %34

34:                                               ; preds = %29, %24, %12
  %35 = load i64, i64* %4, align 8
  ret i64 %35
}

declare dso_local i32 @SET_ERROR_PARAMETER(i32*, i32) #1

declare dso_local i64 @m_addfriend_norequest(i32*, i32*) #1

declare dso_local i32 @set_friend_error(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
